# chuva-vazao

./: .gitignore  HIDROAPP_BRIEFING.md  README.md  pyproject.toml  requirements.txt  schema_inspection.md
.streamlit/: secrets.toml.example
chuva_vazao/: app.py  basin.py  db.py  desagregacao.py  detencao.py  gee_client.py  hidraulica.py  hidrograma.py  hietograma.py  idf.py  landuse.py  plots.py  report.py  tempo_concentracao.py
chuva_vazao/app_pages/: bacia.py  detencao.py  exportar.py  hidraulica.py  hidrograma.py  hietograma.py  posto_idf.py
data/: chuvavazao.db
scripts/: demo_pipeline.py  extract_mdb.py
tests/: conftest.py  test_basin.py  test_db.py  test_desagregacao.py  test_detencao.py  test_gee_client.py  test_hidraulica.py  test_hidrograma.py  test_hietograma.py  test_idf.py  test_landuse.py  test_racional.py  test_tempo_concentracao.py
