[project]
name = "chuva-vazao"
version = "0.1.0"
description = "Pipeline chuva-vazao: IDF regional -> hietograma -> hidrograma a partir do banco HidroFlu"
requires-python = ">=3.12"
dependencies = [
    "earthengine-api>=1.7.22",
    "folium>=0.20",
    "fpdf2>=2.8",
    "geemap>=0.37.2",
    "geopandas>=0.14",
    "kaleido>=1.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "plotly>=5.18",
    "pyodbc>=5.0",
    "pyproj>=3.6",
    "pytest>=8",
    "python-dotenv>=1.0",
    "pywin32>=311",
    "rasterio>=1.3",
    "requests>=2.31",
    "scipy>=1.11",
    "shapely>=2.0",
    "streamlit>=1.40",
    "streamlit-folium>=0.27",
    "whitebox>=2.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: testes de integracao lentos (ex: hit no GEE). Rode com `pytest -m slow`.",
]
